[tool.poetry]
name = "test-eval"
version = "0.1.0"
description = ""
authors = ["victorinect <victor.barra@inect.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
